v6.6
-----
+ Added support for Japanese Yen in regional price comparison feature
+ Added Yen support for pack split calculations
+ Added Yen support for custom wallet amounts
+ Added Yen support for coupon messages
+ Added Yen support for calculating your bundle savings based on games you own
+ Added Yen support for badge pages
: Fixed a bug that caused DLC checkboxes not to work correctly due to a change made by Valve
: Fixed a bug that caused highlighting to break for users with private profiles
: Fixed an issue where cached inventory data would persist past its expiration
: Fixed a bug with market totals for some users with certain currencies
: Fixed a bug where achievement sorting wouldn't work under certain circumstances


v6.5
-----
+ Added the ability to add notes to games on your wishlist
+ Added current price data when viewing a Steam gift in inventory
: Fixed a bug where Metacritic scores would sometimes show incorrectly
: Fixed a bug that caused achievement sorting not to work correctly
: Fixed active market listing total to work with new data format
: Fixed a bug that would sometimes cause you not to be able to remove an item from your wishlist
: Updated highlighting code to be more robust
- Removed button to delete owned games from wishlist, as Steam now does this automatically
- Removed "Remove from wishlist" link on store pages, due to change in Valve's servers


v6.4
-----
+ Added a progress bar to the header that indicates if Enhanced Steam is processing requests
+ Added a "lightbox" effect to app page screenshots
+ Added a list of friends that own a game on the "friends that play" page
+ Increased Early Access detection speed (thanks henryg!)
: Fixed the number of API requests to conform with Valve's throttling limits
: Fixed a bug that caused PCGamingWiki links not to show correctly
: Fixed a bug where sometimes the altered greenlight banner would not show correctly

v6.3.5
-----
+ Added platform icons to the summer sale homepage